script and link

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,12 +40,12 @@
   
       <div class="menu-right">
         <a class="menu-right__link">
-          <svg class="menu-right__svg">
+          <svg class="menu-right__inst">
             <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
         <a class="menu-right__link">
-          <svg class="menu-right__svg">
+          <svg class="menu-right__twit">
             <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
           </svg>
         </a>
