--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -1,10 +1,10 @@
 .sellers {
     padding: 77px 30px 77px;
-    @media screen and (min-width: 1200px) {
-        
-    }
+
+    @media screen and (min-width: 1200px) {}
 
     &__title {
+        margin: 0 auto 37px;
         text-align: center;
         position: static;
         width: 134px;
@@ -12,9 +12,8 @@
         display: flex;
         flex-grow: 0;
         margin: 32px 0px;
-        @media screen and (min-width: 1200px) {
-            
-        }
+
+        @media screen and (min-width: 1200px) {}
     }
 
     &__span {
@@ -26,25 +25,25 @@
         letter-spacing: -3%;
         text-align: center;
         text-transform: uppercase;
-        @media screen and (min-width: 1200px) {
-            
-        }
+
+        @media screen and (min-width: 1200px) {}
     }
 
 }
 
 .sellers-list {
     &__img {
+        margin: 0 auto 23px;
         width: 335px;
         height: 464px;
         margin: 0px 20px;
         border-radius: 15px;
-        @media screen and (min-width: 1200px) {
-            
-        }
+
+        @media screen and (min-width: 1200px) {}
     }
 
     &__info {
+        margin: 0 auto 32px;
         position: static;
         width: 306px;
         height: 90px;
@@ -57,12 +56,12 @@
         order: 1;
         flex-grow: 0;
         margin: 20px 0px;
-        @media screen and (min-width: 1200px) {
-            
-        }
+
+        @media screen and (min-width: 1200px) {}
     }
 
     &__buy {
+        margin: 0 auto 72px;
         background: #FD9222;
         color: #FFF;
         border-radius: 100px;
@@ -77,7 +76,6 @@
         font-weight: 600;
 
         @media screen and (min-width: 1200px) {
-            padding: 12px 28px;
         }
     }
 }
