--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -1,75 +1,76 @@
 .sellers {
     padding: 77px 30px 72px;
 
-    @media screen and (min-width: 1200px) {}
+    
 
     &__title {
         margin: 0 auto 77px;
         text-align: center;
-        position: static;
         width: 134px;
         height: 24px;
         display: flex;
-        flex-grow: 0;
         margin: 32px 0px;
 
-        @media screen and (min-width: 1200px) {}
+        
     }
 
     &__span {
-        color: #FD9222;
-        font-family: Montserrat;
+        color: getcolor('orange-color');
+        font-family: 'Montserrat', sans-serif;
         font-size: 20px;
         font-weight: 600;
         line-height: 24px;
-        letter-spacing: -3%;
         text-align: center;
         text-transform: uppercase;
 
-        @media screen and (min-width: 1200px) {}
+        
     }
 
 }
 
 .reviews-list {
     padding: 37px 30px 62px;
+
     &__img {
         border-radius: 100%;
         max-width: 80px;
         max-height: 80px;
-        @media screen and (min-width: 1200px) {}
+
+        
     }
 
     &__info {
         text-align: center;
-        font-family: var(--font-family);
+        font-family:'Montserrat', sans-serif;
         font-weight: 600;
         font-size: 18px;
         line-height: 1.3px;
         text-align: center;
-        color: var(--chorniy);
-        @media screen and (min-width: 1200px) {}
+        color: getcolor('black-color');
+
+        
     }
 
     &__text {
         text-align: center;
-        font-family: var(--font-family);
+        font-family: 'Montserrat', sans-serif;
         font-weight: 400;
         font-size: 14px;
         line-height: 129%;
-        letter-spacing: -0.02em;
         text-align: center;
-        color: rgba(17, 17, 17, 0.7);
-        @media screen and (min-width: 1200px) {}
+        color: getcolor('gray-color');
+
+        
     }
 }
 
 .btn {
     margin: 0 auto 33px;
-    border: 1px solid var(--oranzheviy);
+    border: 1px solid getcolor('orange-color');
     border-radius: 100px;
     padding: 12px 28px;
     width: 165px;
     height: 41px;
-    @media screen and (min-width: 1200px) {}
+
+    
 }
