--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -1,7 +1,11 @@
 .sellers {
     padding: 77px 30px 72px;
 
-    
+    @media screen and (min-width:768px) {
+        padding: 105px 53px 100px;
+    }
+
+
 
     &__title {
         margin: 0 auto 77px;
@@ -11,7 +15,9 @@
         display: flex;
         margin: 32px 0px;
 
-        
+        @media screen and (min-width:768px) {
+            font-size: 24px;
+        }
     }
 
     &__span {
@@ -23,7 +29,7 @@
         text-align: center;
         text-transform: uppercase;
 
-        
+
     }
 
 }
@@ -31,24 +37,28 @@
 .reviews-list {
     padding: 37px 30px 62px;
 
+    @media screen and (min-width:768px) {
+        padding: 54px 53px 54px;
+    }
+
     &__img {
         border-radius: 100%;
         max-width: 80px;
         max-height: 80px;
 
-        
+
     }
 
     &__info {
         text-align: center;
-        font-family:'Montserrat', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 600;
         font-size: 18px;
         line-height: 1.3px;
         text-align: center;
         color: getcolor('black-color');
 
-        
+
     }
 
     &__text {
@@ -60,7 +70,7 @@
         text-align: center;
         color: getcolor('gray-color');
 
-        
+
     }
 }
 
@@ -72,5 +82,10 @@
     width: 165px;
     height: 41px;
 
-    
+    @media screen and (min-width:768px) {
+        padding: 14px 40px;
+        width: 222px;
+        height: 50px;
+    }
+
 }
