--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -1,7 +1,10 @@
 .sellers {
     padding: 77px 30px 77px;
 
-    
+    @media screen and (min-width:768px) {
+        padding: 106px 32px 105px;
+    }
+
 
     &__title {
         margin: 0 auto 37px;
@@ -11,7 +14,11 @@
         display: flex;
         margin: 32px 0px;
 
-        
+        @media screen and (min-width:768px) {
+            font-size: 24px;
+            line-height: 1.3px;
+        }
+
     }
 
     &__span {
@@ -23,7 +30,6 @@
         text-align: center;
         text-transform: uppercase;
 
-        
     }
 }
 
@@ -36,7 +42,10 @@
         margin: 0px 20px;
         border-radius: 15px;
 
-        
+        @media screen and (min-width:768px) {
+            width: 704px;
+            height: 464px;
+        }
     }
 
     &__info {
@@ -50,13 +59,12 @@
         padding: 0px;
         margin: 20px 0px;
 
-        
     }
 
     &__buy {
         margin: 0 auto 72px;
-        background-color:getcolor('orange-color');
-        color:getcolor('white-color');
+        background-color: getcolor('orange-color');
+        color: getcolor('white-color');
         border-radius: 100px;
         font-size: 18px;
         padding: 14px 40px;
@@ -67,6 +75,12 @@
         line-height: normal;
         font-weight: 600;
 
-        
+        @media screen and (min-width:768px) {
+            padding: 14px 40px;
+            width: 162px;
+            height: 50px;
+        }
+
+
     }
 }
