--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -4,7 +4,7 @@
         <div class="swiper reviews-slider">
         <ul class="reviews-list swiper-wrapper">
             <li class="reviews-list__item swiper-slide">
-                <img class="carousel__img" srcset="./images/review/Victoria1x.png 1x, ./images/review/2x/Victoria2x.png 2x" src="./images/review/Victoria1x.png" alt="women">
+                <img class="reviews__img" srcset="./images/review/Victoria1x.png 1x, ./images/review/2x/Victoria2x.png 2x" src="./images/review/Victoria1x.png" alt="women">
                 <h3 class="reviews-list__title">Victoria Dobrzhanska</h3>
                 <p class="reviews-list__text">
                     I love this chocolate bar.
@@ -12,7 +12,7 @@
                 </p>
             </li>
             <li class="numbers-list__item swiper-slide">
-                <img class="carousel__img" srcset="./images/review/Nazar1x.png 1x, ./images/review/2x/Nazar2x.png 2x" src="./images/review/Nazar1x.png" alt="men">
+                <img class="reviews__img" srcset="./images/review/Nazar1x.png 1x, ./images/review/2x/Nazar2x.png 2x" src="./images/review/Nazar1x.png" alt="men">
                 <h3 class="reviews-list__title">Nazar Babenko</h3>
                 <p class="reviews-list__text">
                     This chocolate confection is a delight!
