--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -5,6 +5,10 @@
         padding: 105px 53px 100px;
     }
 
+    @media screen and (min-width:1200px) {
+        padding: 133px 60px 128px;
+    }
+
 
 
     &__title {
@@ -17,6 +21,11 @@
 
         @media screen and (min-width:768px) {
             font-size: 24px;
+        }
+
+        @media screen and (min-width:1200px) {
+            font-size: 24px;
+            line-height: 1.2px;
         }
     }
 
@@ -39,6 +48,10 @@
 
     @media screen and (min-width:768px) {
         padding: 54px 53px 54px;
+    }
+
+    @media screen and (min-width:1200px) {
+        padding: 54px 60px 59px;
     }
 
     &__img {
