--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -5,6 +5,10 @@
         padding: 106px 32px 105px;
     }
 
+    @media screen and (min-width:1200px) {
+        padding: 133px 33px 133px;
+    }
+
 
     &__title {
         margin: 0 auto 37px;
@@ -17,6 +21,12 @@
         @media screen and (min-width:768px) {
             font-size: 24px;
             line-height: 1.3px;
+        }
+
+        @media screen and (min-width:1200px) {
+            font-size: 24px;
+            line-height: 1.2px;
+
         }
 
     }
@@ -43,8 +53,11 @@
         border-radius: 15px;
 
         @media screen and (min-width:768px) {
-            width: 704px;
-            height: 464px;
+            width: 344px;
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 368px;
         }
     }
 
@@ -62,12 +75,14 @@
     }
 
     &__buy {
+        padding: 12px 28px;
+        width: 120px;
+        height: 41px;
         margin: 0 auto 72px;
         background-color: getcolor('orange-color');
         color: getcolor('white-color');
         border-radius: 100px;
         font-size: 18px;
-        padding: 14px 40px;
         gap: 14px;
         align-items: flex-start;
         font-family: 'Montserrat', sans-serif;
