--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer" id="footer">
     <div class="inner-container">
         <div class="footer-top">
-            <h2 class="footer__title"><span>Chocolate</span> a delicious cure for a bad day</h2>
+            <h2 class="footer__title"><span class="footer__title--orange">Chocolate</span> a delicious cure for a bad day</h2>
 
             <div class="footer-contacts">
                 <li class="footer-contacts__item"><p class="footer-list__text">Contact us</p></li>
@@ -11,14 +11,15 @@
         
         <ul class="footer-socials">
             <li class="footer-socials__item">
-            <svg class="footer-socials__socials">
-            <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
-            </svg></li>
+                <a href="#" class="footer-socials__link"><svg class="footer-socials__socials">
+                    <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                    </svg></a></li>
 
             <li class="footer-socials__item">
-            <svg class="footer-socials__socials">
-            <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-            </svg></li>
+                <a href="#" class="footer-socials__link"><svg class="footer-socials__socials">
+                    <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                    </svg></a>
+            </li>
         </ul>
         </div>
 
