--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,3 +1,12 @@
 .footer, .inner-container {
     
+    &__title {
+        font-family: 'font-family';
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 117%;
+        letter-spacing: -0.02em;
+        color: getcolor ('white-color');
+    }
+    
 }
