--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,11 +2,8 @@
     
     &__title {
         font-family: 'font-family';
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 117%;
-        letter-spacing: -0.02em;
         color: getcolor ('white-color');
+        @mixin fonts (24px, 500, 117%,-0.02em);
     }
     
 }
