added styles for video

--- a/src/partials/video.html
+++ b/src/partials/video.html
@@ -1,4 +1,4 @@
-<section class="video" id="">
+<section class="video" id="video">
   <div class="inner-container">
     <h2 class="video__title">
       how it's<span class="video__title--orange">made?</span>
