--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -20,10 +20,8 @@
         height: 24px;
         display: flex;
         margin: 32px 0px;
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 24px;
         margin-bottom: 74px;
+        @include fonts($font-size:20px, $font-weight:600, $line-height:1.2px, $font-style:normal, $letter-spacing:-0.03em);
 
         @media screen and (min-width:768px) {
             font-size: 24px;
@@ -64,9 +62,10 @@
         padding-bottom: 26px;
         padding-left: 18px;
         border-radius: 15px;
-        border: 1px solid $controls-color;
+        border: 1px solid getcolor(black-color);
         width: 360px;
         height: 200px;
+        
 
         &:first-child {
             padding-bottom: 42px;
