--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -11,16 +11,14 @@
 
 
     &__title {
-        font-size: 20px;
-        line-height: 24px;
         text-transform: uppercase;
         margin-bottom: 32px;
         text-align: center;
         width: 134px;
         height: 24px;
         display: flex;
-        font-weight: 600;
         margin: 32px 0px;
+        @include fonts($font-size: 20px, $font-weight: 600, $line-height: 1.2px, $font-style: normal, $letter-spacing: -0.03em);
 
         @media screen and (min-width: 768px) {
             font-size: 24px;
