--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,18 +1,9 @@
 .products__title {
-position: static;
-width: 164px;
-height: 24px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-padding: 0px;
+margin-bottom: 32px;
 color: getColor('black-color');
-
-flex: none;
-order: 0;
-flex-grow: 0;
-margin: 32px 0px;
+text-transform: uppercase;
+text-align: center;
+@include fonts(20px, 600, 1.2, normal, -0.03em);
 }
 
 
