--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,9 +1,31 @@
 .footer, .inner-container {
+    background-color: getcolor ('advantages-bg');
     
     &__title {
-        font-family: 'font-family';
         color: getcolor ('white-color');
-        @mixin fonts (24px, 500, 117%,-0.02em);
+        @include fonts(24px, 500, 117%,-0.02em);
+
+        @media screen and (min-width: 768px) {
+            @include fonts(28px, 500, 121%,-0.02em);
+        }
+
+    &__title--orange {
+        color: getcolor ('orange-color');
+        @include fonts(24px, 500, 117%,-0.02em);
+
+        @media screen and (min-width: 768px) {
+            @include fonts(28px, 500, 121%,-0.02em);
+        }
+    }
+    }
+
+    &__text {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 129%;
+        text-align: center;
+        color: getcolor ('white-color');
+        @include fonts(129%,);
     }
     
 }
