--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -1,52 +1,56 @@
 .reviews {
-    padding-top: 72px;
     padding-bottom: 72px;
 
     @media screen and (min-width: 768px) {
-        padding-top: 100px;
         padding-bottom: 100px;
     }
 
     @media screen and (min-width: 1200px) {
-        padding-top: 128px;
         padding-bottom: 128px;
     }
 
 
 
     &__title {
+        color: getcolor('black-color');
         text-align: center;
-        width: 134px;
-        height: 24px;
-        display: flex;
-        margin: 32px 0px;
-        margin-bottom: 74px;
-        @include fonts($font-size:20px, $font-weight:600, $line-height:1.2px, $font-style:normal, $letter-spacing:-0.03em);
+        margin-bottom: 32px;
+        @include fonts(20px, 600, 1.2, normal, -0.03em);
+        text-transform: uppercase;
 
         @media screen and (min-width:768px) {
             font-size: 24px;
-            margin-bottom: 91px;
-            line-height: 28px;
+            margin-bottom: 50px;
+            line-height: 1.16;
+            letter-spacing: -0.72px;
         }
     }
 
     &__span {
         color: getcolor('orange-color');
-        font-family: 'Montserrat', sans-serif;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 24px;
-        text-align: center;
-        text-transform: uppercase;
-
-
     }
 
+    &__btn {
+        margin: 32px auto 0;
+        border: 1px solid getcolor('orange-color');
+        border-radius: 100px;
+        padding: 12px 28px;
+        background-color: transparent;
+        color: getcolor('black-color');
+        @include fonts(14px, 600);
+
+        @media screen and (min-width:768px) {
+            padding: 14px 40px;
+            margin: 50px auto 0;
+        }
+
+    }
 }
 
 .reviews-list {
     display: flex;
     margin-bottom: 20px;
+    height: auto;
 
     @media screen and (min-width: 768px) {
         margin-bottom: 31px;
@@ -63,50 +67,48 @@
         padding-left: 18px;
         border-radius: 15px;
         border: 1px solid getcolor(black-color);
-        width: 360px;
+        width: 335px;
         height: 200px;
-        
+        box-shadow: 0 9px 27px 0 rgba(215, 228, 249, 0.25);
+        background-color: getcolor('white-color');
 
-        &:first-child {
-            padding-bottom: 42px;
-        }
 
+        &:first-child,
+        &:last-child,
         &:nth-child(4) {
-            padding-bottom: 42px;
-        }
-
-        &:last-child {
             padding-bottom: 42px;
         }
 
         @media screen and (min-width: 768px) {
             padding-right: 16px;
             padding-left: 16px;
+            width: 344px;
         }
 
         @media screen and (min-width: 1200px) {
             padding-right: 24px;
             padding-left: 24px;
+            width: 360px;
         }
     }
 
 
     &__img {
-        border-radius: 100%;
-        max-width: 80px;
-        max-height: 80px;
-
-
+        width: 80px;
+        position: absolute;
+        top: -42px;
+        left: 50%;
+        transform: translatex(-50%);
+        
     }
 
-    &__info {
+    &__title {
         text-align: center;
         font-family: 'Montserrat', sans-serif;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 1.3px;
         text-align: center;
         color: getcolor('black-color');
+        @include fonts(18px, 600, 1.33);
+        margin-bottom: 24px;
 
 
     }
@@ -114,28 +116,16 @@
     &__text {
         text-align: center;
         font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 129%;
         text-align: center;
         color: getcolor('gray-color');
-
-
+        @include fonts(14px, 400, 1.29);
     }
 }
-
-.btn {
-    margin: 0 auto 33px;
-    border: 1px solid getcolor('orange-color');
-    border-radius: 100px;
-    padding: 12px 28px;
-    width: 165px;
-    height: 41px;
-
-    @media screen and (min-width:768px) {
-        padding: 14px 40px;
-        width: 222px;
-        height: 50px;
+.reviews-slider{
+    position: relative;
+    padding-top: 42px;
+    height: 284px;
+    @media screen and (min-width: 768px){
+        height: 295px;
     }
-
 }
