added styles for products and sliders

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,63 +1,100 @@
 <section class="products" id="products">
-    <div class="inner-container">
-    <h2 class="products__title">Our <span class="products__title--orange">products</span></h2>
+  <div class="inner-container">
+    <h2 class="products__title">
+      Our <span class="products__title--orange">products</span>
+    </h2>
     <div class="swiper products__slider">
-        
-    
-    <ul class="products-list swiper-wrapper">
+      <ul class="products-list swiper-wrapper">
         <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="./images/products/card1/dark-chocolate@1x.jpg" srcet="./images/products/2x/dark-chocolate.jpg" alt="dark-chocolate">
-            <h2 class="products-list__name">orange</h2>
-            <p class="products-list__type">Dark chocolate</p>
-            <button type="button" class="products-list__btn">45 UAH</button>
+          <img
+            class="products-list__img"
+            src="./images/products/card1/dark-chocolate@1x.jpg"
+            srcet="./images/products/card1/dark-chocolate@1x.jpg 1x, ./images/products/2x/dark-chocolate.jpg 2x"
+            alt="dark-chocolate"
+          />
+          <h2 class="products-list__name">orange</h2>
+          <p class="products-list__type">Dark chocolate</p>
+          <button type="button" class="products-list__btn">45 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card1/milk-chocolate@1x.jpg" srcet="./images/products/card1/dark-chocolate.jpg 1x, ./images/products/2x/dark-chocolate.jpg 2x" alt="milk-chocolate">
-            <h2 class="products-list__name">APPLE&CRANBERRY</h2>
-            <p class="products-list__type">Milk chocolate</p>
-            <button type="button" class="products-list__btn">50 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card1/milk-chocolate@1x.jpg"
+            srcet="./images/products/card1/dark-chocolate.jpg 1x, ./images/products/2x/dark-chocolate.jpg 2x"
+            alt="milk-chocolate"
+          />
+          <h2 class="products-list__name">APPLE&CRANBERRY</h2>
+          <p class="products-list__type">Milk chocolate</p>
+          <button type="button" class="products-list__btn">50 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card1/lime-chocolate@1x.jpg" srcet="./images/products/card1/lime-chocolate.jpg 1x, ./images/products/2x/lime-chocolate.jpg 2x" alt="lime-chocolate">
-            <h2 class="products-list__name">lime&sea salt</h2>
-            <p class="products-list__type">Dark chocolate</p>
-            <button type="button" class="products-list__btn">66 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card1/lime-chocolate@1x.jpg"
+            srcet="./images/products/card1/lime-chocolate.jpg 1x, ./images/products/2x/lime-chocolate.jpg 2x"
+            alt="lime-chocolate"
+          />
+          <h2 class="products-list__name">lime&sea salt</h2>
+          <p class="products-list__type">Dark chocolate</p>
+          <button type="button" class="products-list__btn">66 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card1/pine-chocolate@1x.jpg" srcet="./images/products/card1/pine-chocolate.jpg 1x, ./images/products/2x/pine-chocolate.jpg 2x" alt="pine-chocolate">
-            <h2 class="products-list__name">pineapple</h2>
-            <p class="products-list__type">Dark chocolate</p>
-            <button type="button" class="products-list__btn">54 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card1/pine-chocolate@1x.jpg"
+            srcet="./images/products/card1/pine-chocolate.jpg 1x, ./images/products/2x/pine-chocolate.jpg 2x"
+            alt="pine-chocolate"
+          />
+          <h2 class="products-list__name">pineapple</h2>
+          <p class="products-list__type">Dark chocolate</p>
+          <button type="button" class="products-list__btn">54 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card2/classic-black-chocolate@1x.jpg" srcet="./images/products/card1/black-chocolate.jpg 1x, ./images/products/2x/black-chocolate.jpg 2x" alt="classic-black-chocolate">
-            <h2 class="products-list__name">Classic</h2>
-            <p class="products-list__type">Milk chocolate</p>
-            <button type="button" class="products-list__btn">45 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card2/classic-black-chocolate@1x.jpg"
+            srcet="./images/products/card1/black-chocolate.jpg 1x, ./images/products/2x/black-chocolate.jpg 2x"
+            alt="classic-black-chocolate"
+          />
+          <h2 class="products-list__name">Classic</h2>
+          <p class="products-list__type">Milk chocolate</p>
+          <button type="button" class="products-list__btn">45 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card2/honey-chocolate@1x.jpg" srcet="./images/products/card1/honey-chocolate.jpg 1x, ./images/products/2x/honey-chocolate.jpg 2x" alt="honey-chocolate">
-            <h2 class="products-list__name">Honey</h2>
-            <p class="products-list__type">Milk chocolate</p>
-            <button type="button" class="products-list__btn">50 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card2/honey-chocolate@1x.jpg"
+            srcet="./images/products/card1/honey-chocolate.jpg 1x, ./images/products/2x/honey-chocolate.jpg 2x"
+            alt="honey-chocolate"
+          />
+          <h2 class="products-list__name">Honey</h2>
+          <p class="products-list__type">Milk chocolate</p>
+          <button type="button" class="products-list__btn">50 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card2/roasted-chocolate@1x.jpg" srcet="./images/products/card1/roasted-chocolate.jpg 1x, ./images/products/2x/roasted-chocolate.jpg 2x" alt="roasted-chocolate">
-            <h2 class="products-list__name">Roasted fruits</h2>
-            <p class="products-list__type">Dark chocolate</p>
-            <button type="button" class="products-list__btn">66 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card2/roasted-chocolate@1x.jpg"
+            srcet="./images/products/card1/roasted-chocolate.jpg 1x, ./images/products/2x/roasted-chocolate.jpg 2x"
+            alt="roasted-chocolate"
+          />
+          <h2 class="products-list__name">Roasted fruits</h2>
+          <p class="products-list__type">Dark chocolate</p>
+          <button type="button" class="products-list__btn">66 UAH</button>
         </li>
-        <li class="products-list__item">
-            <img class="products-list__img" src="./images/products/card2/classic-chocolate@1x .jpg" srcet="./images/products/card1/classic-chocolate.jpg 1x, ./images/products/2x/classic-chocolate.jpg 2x" alt="white-chocolate">
-            <h2 class="products-list__name">Classic</h2>
-            <p class="products-list__type">White chocolate</p>
-            <button type="button" class="products-list__btn">54 UAH</button>
+        <li class="products-list__item swiper-slide">
+          <img
+            class="products-list__img"
+            src="./images/products/card2/classic-chocolate@1x .jpg"
+            srcet="./images/products/card1/classic-chocolate.jpg 1x, ./images/products/2x/classic-chocolate.jpg 2x"
+            alt="white-chocolate"
+          />
+          <h2 class="products-list__name">Classic</h2>
+          <p class="products-list__type">White chocolate</p>
+          <button type="button" class="products-list__btn">54 UAH</button>
         </li>
-    </ul>
-    <div class="swiper-pagination">
-
+      </ul>
+      <div class="swiper-pagination"></div>
     </div>
-    <img class="products-banner" src="./images/icons/offer-banner-long.png">
-</div>
-</div>
-</section> 
+  </div>
+</section>
