--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,60 +1,72 @@
-.products__title {
-margin-bottom: 32px;
+.swiper {
+    height: 409px;
+    @media screen and (min-width: 768px) {
+        height: 422px;
+    }
+}
+
+.swiper-pagination {
+    display: flex;
+    justify-content: center;
+    gap: 13px;
+}
+
+.swiper-pagination-bullet {
+    background-color: grey;
+    width: 13px;
+    height: 13px;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: getcolor('orange-color');
+    width: 28px;
+    border-radius: 15px;
+}
+
+.pruducts {
+    &__title {
+        margin-bottom: 32px;
 color: getColor('black-color');
 text-transform: uppercase;
 text-align: center;
 @include fonts(20px, 600, 1.2, normal, -0.03em);
+
+&--orange {
+    color: getcolor('orange-color');
+}
+    }
 }
 
-
-.products-list__name {
-    position: static;
-    width: 81px;
-    height: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    color: getColor('black-color');
-    
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin: 2px 0px;
+.products-list {
+    &__item {
+        width: 335px;
+        height: 364px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 32px 52px;
+        border-radius: 15px;
+        border: 1px solid rgba(17, 17, 17, 0.1);
+        background-color: getcolor('white-color');
     }
-    
-    .products-list__type {
-    position: static;
-    width: 88px;
-    height: 14px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    margin: 2px 0px;
+    &__img {
+        margin-bottom: 8px;
     }
-    
-    .products-list__btn {
-    position: static;
-    width: 55px;
-    height: 17px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 8px 20px 8px 20px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin: 0px 14px;
+    &__name {
+    color: getcolor('black-color');
+    margin-bottom: 2px;
+    @include fonts(18px, 600, 1.33, normal, -0.36px);
+    text-transform: uppercase;
     }
-    
+    &__type {
+        color: getcolor('grey-color');
+        @include fonts(12px, 400, normal, -0.02em)
+    }
+    &__btn {
+        padding: 8px 20px 8px 20px;
+        margin: 0px 14px;
+    }
+}
     .products-banner {
     position: static;
     width: 28px;
@@ -63,15 +75,4 @@ text-align: center;
     order: 0;
     flex-grow: 0;
     margin: 0px 13px;
-    }
-    
-    .products-list__item {
-    position: static;
-    width: 335px;
-    height: 364px;
-    
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    margin: 20px 0px;
     }
