--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,30 +1,73 @@
 .advantages {
     padding: 20px;
-    background-color:getcolor('advantages-bg');
-}
-.advantages-list {
-    @include flex($wrap:wrap);
-    gap: 29px;
-    &__item {
-        max-width: 308px;
+    background-color: getcolor('advantages-bg');
+
+    @media screen and (min-width:768px) {
+        padding: 50px 60px 85px 32px;
     }
-    &__box {
-        @include flex($justify-content:center);
-        border: 1px solid getcolor('advantages-color');
-        border-radius: 50%;
-        width: 62px;
-       height: 62px;
+
+    @media screen and (min-width:1199px) {
+        padding: 50px;
+        margin: 0;
     }
-    &__svg {
-        fill: getcolor('orange-color');
-    }
-    &__title {
-        @include fonts($font-size:18px, $font-weight:600);
-        color:getcolor('white-color');
-        margin: 22px 0 18px;
-    }
-    &__text {
-        @include fonts();
-        color: getcolor('advantages-color');
+
+    .advantages-list {
+        @include flex($wrap: wrap);
+        gap: 29px;
+
+        &__item {
+            max-width: 308px;
+
+
+            @media screen and (min-width:1199px) {
+                position: relative;
+
+                &:nth-child(2)::before {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 60px;
+                    left: -70px;
+                    width: 1px;
+                    height: 124px;
+                    background-color: rgba(255, 255, 255, 0.5);
+                }
+
+                &:nth-child(2)::after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 60px;
+                    right: -18px;
+                    width: 1px;
+                    height: 124px;
+                    background-color: rgba(255, 255, 255, 0.5);
+                }
+            }
+        }
+
+
+        &__box {
+            @include flex($justify-content: center);
+            border: 1px solid getcolor('advantages-color');
+            border-radius: 50%;
+            width: 62px;
+            height: 62px;
+        }
+
+        &__svg {
+            fill: getcolor('orange-color');
+        }
+
+        &__title {
+            @include fonts($font-size: 18px, $font-weight: 600);
+            color: getcolor('white-color');
+            margin: 22px 0 18px;
+        }
+
+        &__text {
+            @include fonts();
+            color: getcolor('advantages-color');
+        }
     }
 }
