--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -33,6 +33,6 @@
                 </label>
             </li>
         </ul>
-        <button type="submit" class="hero-modal__submit">Send</button>
+        <button type="submit" class="modal-review__submit">Send</button>
     </form>
 </div>
