--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -4,7 +4,7 @@
         <div class="swiper reviews-slider">
         <ul class="reviews-list swiper-wrapper">
             <li class="reviews-list__item swiper-slide">
-                <img class="reviews-list__img" srcset="./images/review/reviews-1-1x.png 1x, ./images/review/2x/reviews-1-2x.png 2x" src="./images/review/reviews-1-1x.png" alt="women">
+                <img class="reviews-list__img" srcset="./images/review/reviews-1-1x.png 1x, ./images/review/2x/reviews-1-2x.png 2x" src="./images/review/reviews-1-1x.png" alt="Victoria photo">
                 <h3 class="reviews-list__title">Victoria Dobrzhanska</h3>
                 <p class="reviews-list__text">
                     I love this chocolate bar.
@@ -12,7 +12,7 @@
                 </p>
             </li>
             <li class="reviews-list__item swiper-slide">
-                <img class="reviews-list__img" srcset="./images/review/reviews-2-1x.png 1x, ./images/review/2x/reviews-2-2x.png 2x" src="./images/review/reviews-2-1x.png" alt="men">
+                <img class="reviews-list__img" srcset="./images/review/reviews-2-1x.png 1x, ./images/review/2x/reviews-2-2x.png 2x" src="./images/review/reviews-2-1x.png" alt="Nazar photo">
                 <h3 class="reviews-list__title">Nazar Babenko</h3>
                 <p class="reviews-list__text">
                     This chocolate confection is a delight!
@@ -21,7 +21,7 @@
                 </p>
             </li>
             <li class="reviews-list__item swiper-slide">
-                <img class="reviews-list__img" srcset="./images/review/reviews-3-1x.png 1x, ./images/review/2x/reviews-3-2x.png 2x" src="./images/review/reviews-3-1x.png" alt="women">
+                <img class="reviews-list__img" srcset="./images/review/reviews-3-1x.png 1x, ./images/review/2x/reviews-3-2x.png 2x" src="./images/review/reviews-3-1x.png" alt="Olena photo">
                 <h3 class="reviews-list__title">Olena Kampusch</h3>
                 <p class="reviews-list__text">
                     Chocolate is a family favourite treat.
@@ -30,7 +30,7 @@
                 </p>
             </li>
             <li class="reviews-list__item swiper-slide">
-                <img class="reviews-list__img" srcset="./images/review/reviews-4-1x.png 1x, ./images/review/2x/reviews-4-2x.png 2x" src="./images/review/reviews-4-1x.png" alt="women">
+                <img class="reviews-list__img" srcset="./images/review/reviews-4-1x.png 1x, ./images/review/2x/reviews-4-2x.png 2x" src="./images/review/reviews-4-1x.png" alt="Natalia photo">
                 <h3 class="reviews-list__title">Natalia Sus</h3>
                 <p class="reviews-list__text">
                     The chocolate assortment was delicious. Both 
@@ -39,7 +39,7 @@
                 </p>
             </li>
             <li class="reviews-list__item swiper-slide">
-                <img class="reviews-list__img" srcset="./images/review/reviews-5-1x.png 1x, ./images/review/2x/reviews-5-2x.png 2x" src="./images/review/reviews-5-1x.png" alt="women">
+                <img class="reviews-list__img" srcset="./images/review/reviews-5-1x.png 1x, ./images/review/2x/reviews-5-2x.png 2x" src="./images/review/reviews-5-1x.png" alt="Danilo photo">
                 <h3 class="reviews-list__title">Danilo Nottingham</h3>
                 <p class="reviews-list__text">
                     This is delicious. It so rich and flavorful you 
@@ -49,7 +49,7 @@
                 </p>
             </li>
             <li class="reviews-list__item swiper-slide">
-                <img class="reviews-list__img" srcset="./images/review/reviews-6-1x.png 1x, ./images/review/2x/reviews-6-2x.png 2x" src="./images/review/reviews-6-1x.png"  alt="women">
+                <img class="reviews-list__img" srcset="./images/review/reviews-6-1x.png 1x, ./images/review/2x/reviews-6-2x.png 2x" src="./images/review/reviews-6-1x.png"  alt="Irina photo">
                 <h3 class="reviews-list__title">Irina Tydnyuk</h3>
                 <p class="reviews-list__text">
                     This is simply the best chocolate around, and
