--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -10,7 +10,13 @@
                 <source srcset="./images/sellers/mobile/choc-coffe-mobile.jpg 2x" media="(max-width:767px)">
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-1">
               </picture>
-              <p class="sellers__info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+              <p class="sellers__info">
+                Crazy enough chocolate originates from a 
+                bean just like the coffee bean called Cacao. 
+                Cacao has been around for thousands of 
+                years and was first discovered by the Native 
+                American tribe called the Mayans.
+              </p>
             </li>
             <li class="selers-list__item">
               <picture>
