--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden">
     <form class="modal-buy">
-        <button class="buy-modal__close">
+        <button class="modal-buy__close">
             <svg class="modal-buy__svg">
                 <use href="./images/icons/symbol-defs.svg#icon-close"></use>
               </svg>
@@ -52,6 +52,6 @@
                 </label>
             </li>
         </ul>
-        <button type="submit" class="hero-modal__submit">Submit</button>
+        <button type="submit" class="modal-buy__submit">Submit</button>
     </form>
 </div>
