--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -18,7 +18,7 @@
         height: 24px;
         display: flex;
         margin: 32px 0px;
-        @include fonts($font-size: 20px, $font-weight: 600, $line-height: 1.2px, $font-style: normal, $letter-spacing: -0.03em);
+        @include fonts(20px, 600, 1.2px, normal, -0.03em);
 
         @media screen and (min-width: 768px) {
             font-size: 24px;
@@ -34,15 +34,8 @@
 
     }
 
-    &__span {
+    &__orange {
         color: getcolor('orange-color');
-        font-family: 'Montserrat', sans-serif;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 24px;
-        text-align: center;
-        text-transform: uppercase;
-
     }
 }
 
@@ -97,12 +90,9 @@
 
     &__info {
         flex-shrink: 0;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 18px;
         margin-bottom: 32px;
         max-width: 290px;
+        @include fonts(14px, 400, 1.29, normal);
 
         @media screen and (min-width: 375px) {
             max-width: 306px;
