--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,6 +1,6 @@
 <section class="subscribe" id="subscribe">
     <div class="inner-container">
-        <h2 class="subscribe__title">EXPLORE OUR NEW CHOCOLATE FIRST</h2>
+        <h2 class="subscribe__title">EXPLORE OUR NEW <br> CHOCOLATE FIRST</h2>
         <p class="subscribe__text">From the velvety texture to the rich and complex flavor, our New Chocolate is a true indulgence that will leave you craving more. Made with only the finest ingredients and handcrafted with the utmost care, each piece is a work of art that is sure to please.</p>
         <button type="button" class="subscribe__btn">Subscribe</button>
     </div>
